feat: add jwt middleware
