# docs/swagger.yaml
@@ -16,6 +16,16 @@ definitions:
       updatedAt:
         type: integer
     type: object
+  model.LoginModel:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   model.PaginateRoleModel:
     properties:
       order:
@@ -74,39 +84,7 @@ paths:
                 status:
                   type: string
               type: object
-      security:
-      - BearerAuth: []
       summary: Add account
-      tags:
-      - Account
-  /api/v1/account/checkEmail:
-    get:
-      consumes:
-      - application/json
-      description: check email availability
-      parameters:
-      - description: email
-        in: query
-        name: email
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ok
-          schema:
-            allOf:
-            - type: object
-            - properties:
-                message:
-                  type: string
-                status:
-                  type: string
-              type: object
-      security:
-      - BearerAuth: []
-      summary: Check email
       tags:
       - Account
   /api/v1/account/delete:
@@ -170,6 +148,38 @@ paths:
       security:
       - BearerAuth: []
       summary: Get all account
+      tags:
+      - Account
+  /api/v1/account/getByEmail:
+    get:
+      consumes:
+      - application/json
+      description: get account using email
+      parameters:
+      - description: email
+        in: query
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - type: object
+            - properties:
+                datas:
+                  items:
+                    $ref: '#/definitions/model.AccountModel'
+                  type: array
+                status:
+                  type: string
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Get account by email
       tags:
       - Account
   /api/v1/account/getById:
@@ -241,16 +251,12 @@ paths:
       - application/json
       description: Login user
       parameters:
-      - description: email
-        in: formData
-        name: email
+      - description: body
+        in: body
+        name: body
         required: true
-        type: string
-      - description: password
-        in: formData
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/model.LoginModel'
       produces:
       - application/json
       responses:
@@ -288,6 +294,28 @@ paths:
                   type: string
               type: object
       summary: Logout
+      tags:
+      - Auth
+  /api/v1/auth/refresh:
+    get:
+      consumes:
+      - application/json
+      description: refresh token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            allOf:
+            - type: object
+            - properties:
+                message:
+                  type: string
+                status:
+                  type: string
+              type: object
+      summary: Refresh
       tags:
       - Auth
   /api/v1/role/add:
