# model/auth.go
@@ -1,6 +1,6 @@
 package model
 
-type LoginModel struct{
-	Email string `json:"email" binding:"required,email"`
-	Password string
+type LoginModel struct {
+	Email    string `json:"email,omitempty" bson:"email,omitempty" binding:"required"`
+	Password string `json:"password,omitempty" bson:"password,omitempty" binding:"required"`
 }
